// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`documenter output > dom 1`] = `
[
  {
    "methods": [
      {
        "name": "blur",
        "parameters": [],
        "returnType": {
          "name": "void",
          "type": "intrinsic",
        },
      },
      {
        "description": "Performs a click by triggering a mouse event.
Note that programmatic events ignore disabled attribute and will trigger listeners even if the element is disabled.",
        "name": "click",
        "parameters": [
          {
            "flags": {
              "isOptional": true,
            },
            "name": "params",
            "typeName": "MouseEventInit",
          },
        ],
        "returnType": {
          "name": "void",
          "type": "intrinsic",
        },
      },
      {
        "name": "find",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "rootSelector",
            "typeName": "string",
          },
          {
            "flags": {
              "isOptional": true,
            },
            "name": "selector",
            "typeName": "Selector",
          },
        ],
        "returnType": {
          "name": "ElementWrapper | null",
          "type": "union",
        },
      },
      {
        "name": "findAll",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "rootSelector",
            "typeName": "string",
          },
          {
            "flags": {
              "isOptional": true,
            },
            "name": "selector",
            "typeName": "Selector",
          },
        ],
        "returnType": {
          "name": "array",
          "type": "reference",
        },
      },
      {
        "name": "findAllByClassName",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "className",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "array",
          "type": "reference",
        },
      },
      {
        "description": "Returns the wrappers of all components that match the specified component type and the specified CSS selector.
If no CSS selector is specified, returns all of the components that match the specified component type.
If no matching component is found, returns an empty array.",
        "name": "findAllComponents",
        "parameters": [
          {
            "description": "
Component's wrapper class",
            "flags": {
              "isOptional": false,
            },
            "name": "ComponentClass",
            "typeName": "ComponentWrapperClass",
          },
          {
            "flags": {
              "isOptional": true,
            },
            "name": "selector",
            "typeName": "Selector",
          },
        ],
        "returnType": {
          "name": "Array",
          "type": "reference",
          "typeArguments": [
            {
              "name": "Wrapper",
              "type": "typeParameter",
            },
          ],
        },
      },
      {
        "name": "findAny",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "selectors",
            "typeName": "Array",
          },
        ],
        "returnType": {
          "name": "ElementWrapper | null",
          "type": "union",
        },
      },
      {
        "name": "findByClassName",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "className",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "ElementWrapper | null",
          "type": "union",
        },
      },
      {
        "description": "Returns the component wrapper matching the specified selector.
If the specified selector doesn't match any element, it returns \`null\`.
Note: This function returns the specified component's wrapper even if the specified selector points to a different component type.
",
        "name": "findComponent",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "rootSelector",
            "typeName": "string",
          },
          {
            "description": "
Component's wrapper class",
            "flags": {
              "isOptional": false,
            },
            "name": "ComponentClass",
            "typeName": "WrapperClass",
          },
          {
            "description": "
CSS selector",
            "flags": {
              "isOptional": true,
            },
            "name": "selector",
            "typeName": "Selector",
          },
        ],
        "returnType": {
          "name": "Wrapper | null",
          "type": "union",
        },
      },
      {
        "name": "fireEvent",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "event",
            "typeName": "Event",
          },
        ],
        "returnType": {
          "name": "void",
          "type": "intrinsic",
        },
      },
      {
        "name": "focus",
        "parameters": [],
        "returnType": {
          "name": "void",
          "type": "intrinsic",
        },
      },
      {
        "name": "getElement",
        "parameters": [],
        "returnType": {
          "name": "ElementType",
          "type": "typeParameter",
        },
      },
      {
        "name": "keydown",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "keyCode",
            "typeName": "KeyCode",
          },
        ],
        "returnType": {
          "name": "void",
          "type": "intrinsic",
        },
      },
      {
        "name": "keypress",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "keyCode",
            "typeName": "KeyCode",
          },
        ],
        "returnType": {
          "name": "void",
          "type": "intrinsic",
        },
      },
      {
        "name": "keyup",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "keyCode",
            "typeName": "KeyCode",
          },
        ],
        "returnType": {
          "name": "void",
          "type": "intrinsic",
        },
      },
      {
        "name": "matches",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "selector",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "this | null",
          "type": "union",
        },
      },
    ],
    "name": "AbstractWrapper",
  },
  {
    "methods": [
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.blur",
        },
        "name": "blur",
        "parameters": [],
        "returnType": {
          "name": "void",
          "type": "intrinsic",
        },
      },
      {
        "description": "Performs a click by triggering a mouse event.
Note that programmatic events ignore disabled attribute and will trigger listeners even if the element is disabled.",
        "inheritedFrom": {
          "name": "AbstractWrapper.click",
        },
        "name": "click",
        "parameters": [
          {
            "flags": {
              "isOptional": true,
            },
            "name": "params",
            "typeName": "MouseEventInit",
          },
        ],
        "returnType": {
          "name": "void",
          "type": "intrinsic",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.find",
        },
        "name": "find",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "rootSelector",
            "typeName": "string",
          },
          {
            "flags": {
              "isOptional": true,
            },
            "name": "selector",
            "typeName": "Selector",
          },
        ],
        "returnType": {
          "name": "ElementWrapper | null",
          "type": "union",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.findAll",
        },
        "name": "findAll",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "rootSelector",
            "typeName": "string",
          },
          {
            "flags": {
              "isOptional": true,
            },
            "name": "selector",
            "typeName": "Selector",
          },
        ],
        "returnType": {
          "name": "array",
          "type": "reference",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.findAllByClassName",
        },
        "name": "findAllByClassName",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "className",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "array",
          "type": "reference",
        },
      },
      {
        "description": "Returns the wrappers of all components that match the specified component type and the specified CSS selector.
If no CSS selector is specified, returns all of the components that match the specified component type.
If no matching component is found, returns an empty array.",
        "inheritedFrom": {
          "name": "AbstractWrapper.findAllComponents",
        },
        "name": "findAllComponents",
        "parameters": [
          {
            "description": "
Component's wrapper class",
            "flags": {
              "isOptional": false,
            },
            "name": "ComponentClass",
            "typeName": "ComponentWrapperClass",
          },
          {
            "flags": {
              "isOptional": true,
            },
            "name": "selector",
            "typeName": "Selector",
          },
        ],
        "returnType": {
          "name": "Array",
          "type": "reference",
          "typeArguments": [
            {
              "name": "Wrapper",
              "type": "typeParameter",
            },
          ],
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.findAny",
        },
        "name": "findAny",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "selectors",
            "typeName": "Array",
          },
        ],
        "returnType": {
          "name": "ElementWrapper | null",
          "type": "union",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.findByClassName",
        },
        "name": "findByClassName",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "className",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "ElementWrapper | null",
          "type": "union",
        },
      },
      {
        "description": "Returns the component wrapper matching the specified selector.
If the specified selector doesn't match any element, it returns \`null\`.
Note: This function returns the specified component's wrapper even if the specified selector points to a different component type.
",
        "inheritedFrom": {
          "name": "AbstractWrapper.findComponent",
        },
        "name": "findComponent",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "rootSelector",
            "typeName": "string",
          },
          {
            "description": "
Component's wrapper class",
            "flags": {
              "isOptional": false,
            },
            "name": "ComponentClass",
            "typeName": "WrapperClass",
          },
          {
            "description": "
CSS selector",
            "flags": {
              "isOptional": true,
            },
            "name": "selector",
            "typeName": "Selector",
          },
        ],
        "returnType": {
          "name": "Wrapper | null",
          "type": "union",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.fireEvent",
        },
        "name": "fireEvent",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "event",
            "typeName": "Event",
          },
        ],
        "returnType": {
          "name": "void",
          "type": "intrinsic",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.focus",
        },
        "name": "focus",
        "parameters": [],
        "returnType": {
          "name": "void",
          "type": "intrinsic",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.getElement",
        },
        "name": "getElement",
        "parameters": [],
        "returnType": {
          "name": "ElementType",
          "type": "typeParameter",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.keydown",
        },
        "name": "keydown",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "keyCode",
            "typeName": "KeyCode",
          },
        ],
        "returnType": {
          "name": "void",
          "type": "intrinsic",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.keypress",
        },
        "name": "keypress",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "keyCode",
            "typeName": "KeyCode",
          },
        ],
        "returnType": {
          "name": "void",
          "type": "intrinsic",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.keyup",
        },
        "name": "keyup",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "keyCode",
            "typeName": "KeyCode",
          },
        ],
        "returnType": {
          "name": "void",
          "type": "intrinsic",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.matches",
        },
        "name": "matches",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "selector",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "this | null",
          "type": "union",
        },
      },
    ],
    "name": "ComponentWrapper",
  },
  {
    "methods": [
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.blur",
        },
        "name": "blur",
        "parameters": [],
        "returnType": {
          "name": "void",
          "type": "intrinsic",
        },
      },
      {
        "description": "Performs a click by triggering a mouse event.
Note that programmatic events ignore disabled attribute and will trigger listeners even if the element is disabled.",
        "inheritedFrom": {
          "name": "AbstractWrapper.click",
        },
        "name": "click",
        "parameters": [
          {
            "flags": {
              "isOptional": true,
            },
            "name": "params",
            "typeName": "MouseEventInit",
          },
        ],
        "returnType": {
          "name": "void",
          "type": "intrinsic",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.find",
        },
        "name": "find",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "rootSelector",
            "typeName": "string",
          },
          {
            "flags": {
              "isOptional": true,
            },
            "name": "selector",
            "typeName": "Selector",
          },
        ],
        "returnType": {
          "name": "ElementWrapper | null",
          "type": "union",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.findAll",
        },
        "name": "findAll",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "rootSelector",
            "typeName": "string",
          },
          {
            "flags": {
              "isOptional": true,
            },
            "name": "selector",
            "typeName": "Selector",
          },
        ],
        "returnType": {
          "name": "array",
          "type": "reference",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.findAllByClassName",
        },
        "name": "findAllByClassName",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "className",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "array",
          "type": "reference",
        },
      },
      {
        "description": "Returns the wrappers of all components that match the specified component type and the specified CSS selector.
If no CSS selector is specified, returns all of the components that match the specified component type.
If no matching component is found, returns an empty array.",
        "inheritedFrom": {
          "name": "AbstractWrapper.findAllComponents",
        },
        "name": "findAllComponents",
        "parameters": [
          {
            "description": "
Component's wrapper class",
            "flags": {
              "isOptional": false,
            },
            "name": "ComponentClass",
            "typeName": "ComponentWrapperClass",
          },
          {
            "flags": {
              "isOptional": true,
            },
            "name": "selector",
            "typeName": "Selector",
          },
        ],
        "returnType": {
          "name": "Array",
          "type": "reference",
          "typeArguments": [
            {
              "name": "Wrapper",
              "type": "typeParameter",
            },
          ],
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.findAny",
        },
        "name": "findAny",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "selectors",
            "typeName": "Array",
          },
        ],
        "returnType": {
          "name": "ElementWrapper | null",
          "type": "union",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.findByClassName",
        },
        "name": "findByClassName",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "className",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "ElementWrapper | null",
          "type": "union",
        },
      },
      {
        "description": "Returns the component wrapper matching the specified selector.
If the specified selector doesn't match any element, it returns \`null\`.
Note: This function returns the specified component's wrapper even if the specified selector points to a different component type.
",
        "inheritedFrom": {
          "name": "AbstractWrapper.findComponent",
        },
        "name": "findComponent",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "rootSelector",
            "typeName": "string",
          },
          {
            "description": "
Component's wrapper class",
            "flags": {
              "isOptional": false,
            },
            "name": "ComponentClass",
            "typeName": "WrapperClass",
          },
          {
            "description": "
CSS selector",
            "flags": {
              "isOptional": true,
            },
            "name": "selector",
            "typeName": "Selector",
          },
        ],
        "returnType": {
          "name": "Wrapper | null",
          "type": "union",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.fireEvent",
        },
        "name": "fireEvent",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "event",
            "typeName": "Event",
          },
        ],
        "returnType": {
          "name": "void",
          "type": "intrinsic",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.focus",
        },
        "name": "focus",
        "parameters": [],
        "returnType": {
          "name": "void",
          "type": "intrinsic",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.getElement",
        },
        "name": "getElement",
        "parameters": [],
        "returnType": {
          "name": "ElementType",
          "type": "typeParameter",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.keydown",
        },
        "name": "keydown",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "keyCode",
            "typeName": "KeyCode",
          },
        ],
        "returnType": {
          "name": "void",
          "type": "intrinsic",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.keypress",
        },
        "name": "keypress",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "keyCode",
            "typeName": "KeyCode",
          },
        ],
        "returnType": {
          "name": "void",
          "type": "intrinsic",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.keyup",
        },
        "name": "keyup",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "keyCode",
            "typeName": "KeyCode",
          },
        ],
        "returnType": {
          "name": "void",
          "type": "intrinsic",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.matches",
        },
        "name": "matches",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "selector",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "this | null",
          "type": "union",
        },
      },
    ],
    "name": "ElementWrapper",
  },
]
`;

exports[`documenter output > selectors 1`] = `
[
  {
    "methods": [
      {
        "name": "find",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "selector",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "ElementWrapper",
          "type": "reference",
        },
      },
      {
        "name": "findAll",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "selector",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "MultiElementWrapper",
          "type": "reference",
          "typeArguments": [
            {
              "name": "ElementWrapper",
              "type": "reference",
            },
          ],
        },
      },
      {
        "name": "findAllByClassName",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "className",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "MultiElementWrapper",
          "type": "reference",
          "typeArguments": [
            {
              "name": "ElementWrapper",
              "type": "reference",
            },
          ],
        },
      },
      {
        "description": "Returns a multi-element wrapper that matches the specified component type with the specified CSS selector.
If no CSS selector is specified, returns a multi-element wrapper that matches the specified component type.",
        "name": "findAllComponents",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "ComponentClass",
            "typeName": "ComponentWrapperClass",
          },
          {
            "flags": {
              "isOptional": true,
            },
            "name": "selector",
          },
        ],
        "returnType": {
          "name": "MultiElementWrapper",
          "type": "reference",
          "typeArguments": [
            {
              "name": "Wrapper",
              "type": "typeParameter",
            },
          ],
        },
      },
      {
        "name": "findAny",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "selectors",
            "typeName": "Array",
          },
        ],
        "returnType": {
          "name": "ElementWrapper",
          "type": "reference",
        },
      },
      {
        "name": "findByClassName",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "className",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "ElementWrapper",
          "type": "reference",
        },
      },
      {
        "description": "Returns a wrapper that matches the specified component type with the specified CSS selector.
Note: This function returns the specified component's wrapper even if the specified selector points to a different component type.
",
        "name": "findComponent",
        "parameters": [
          {
            "description": "
CSS selector",
            "flags": {
              "isOptional": false,
            },
            "name": "selector",
            "typeName": "string",
          },
          {
            "description": "
Component's wrapper class",
            "flags": {
              "isOptional": false,
            },
            "name": "ComponentClass",
            "typeName": "WrapperClass",
          },
        ],
        "returnType": {
          "name": "Wrapper",
          "type": "typeParameter",
        },
      },
      {
        "name": "getElement",
        "parameters": [],
        "returnType": {
          "name": "string",
          "type": "intrinsic",
        },
      },
      {
        "name": "matches",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "selector",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "ElementWrapper",
          "type": "reference",
        },
      },
      {
        "name": "toSelector",
        "parameters": [],
        "returnType": {
          "name": "string",
          "type": "intrinsic",
        },
      },
    ],
    "name": "AbstractWrapper",
  },
  {
    "methods": [
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.find",
        },
        "name": "find",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "selector",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "ElementWrapper",
          "type": "reference",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.findAll",
        },
        "name": "findAll",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "selector",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "MultiElementWrapper",
          "type": "reference",
          "typeArguments": [
            {
              "name": "ElementWrapper",
              "type": "reference",
            },
          ],
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.findAllByClassName",
        },
        "name": "findAllByClassName",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "className",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "MultiElementWrapper",
          "type": "reference",
          "typeArguments": [
            {
              "name": "ElementWrapper",
              "type": "reference",
            },
          ],
        },
      },
      {
        "description": "Returns a multi-element wrapper that matches the specified component type with the specified CSS selector.
If no CSS selector is specified, returns a multi-element wrapper that matches the specified component type.",
        "inheritedFrom": {
          "name": "AbstractWrapper.findAllComponents",
        },
        "name": "findAllComponents",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "ComponentClass",
            "typeName": "ComponentWrapperClass",
          },
          {
            "flags": {
              "isOptional": true,
            },
            "name": "selector",
          },
        ],
        "returnType": {
          "name": "MultiElementWrapper",
          "type": "reference",
          "typeArguments": [
            {
              "name": "Wrapper",
              "type": "typeParameter",
            },
          ],
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.findAny",
        },
        "name": "findAny",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "selectors",
            "typeName": "Array",
          },
        ],
        "returnType": {
          "name": "ElementWrapper",
          "type": "reference",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.findByClassName",
        },
        "name": "findByClassName",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "className",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "ElementWrapper",
          "type": "reference",
        },
      },
      {
        "description": "Returns a wrapper that matches the specified component type with the specified CSS selector.
Note: This function returns the specified component's wrapper even if the specified selector points to a different component type.
",
        "inheritedFrom": {
          "name": "AbstractWrapper.findComponent",
        },
        "name": "findComponent",
        "parameters": [
          {
            "description": "
CSS selector",
            "flags": {
              "isOptional": false,
            },
            "name": "selector",
            "typeName": "string",
          },
          {
            "description": "
Component's wrapper class",
            "flags": {
              "isOptional": false,
            },
            "name": "ComponentClass",
            "typeName": "WrapperClass",
          },
        ],
        "returnType": {
          "name": "Wrapper",
          "type": "typeParameter",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.getElement",
        },
        "name": "getElement",
        "parameters": [],
        "returnType": {
          "name": "string",
          "type": "intrinsic",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.matches",
        },
        "name": "matches",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "selector",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "ElementWrapper",
          "type": "reference",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.toSelector",
        },
        "name": "toSelector",
        "parameters": [],
        "returnType": {
          "name": "string",
          "type": "intrinsic",
        },
      },
    ],
    "name": "ComponentWrapper",
  },
  {
    "methods": [
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.find",
        },
        "name": "find",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "selector",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "ElementWrapper",
          "type": "reference",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.findAll",
        },
        "name": "findAll",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "selector",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "MultiElementWrapper",
          "type": "reference",
          "typeArguments": [
            {
              "name": "ElementWrapper",
              "type": "reference",
            },
          ],
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.findAllByClassName",
        },
        "name": "findAllByClassName",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "className",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "MultiElementWrapper",
          "type": "reference",
          "typeArguments": [
            {
              "name": "ElementWrapper",
              "type": "reference",
            },
          ],
        },
      },
      {
        "description": "Returns a multi-element wrapper that matches the specified component type with the specified CSS selector.
If no CSS selector is specified, returns a multi-element wrapper that matches the specified component type.",
        "inheritedFrom": {
          "name": "AbstractWrapper.findAllComponents",
        },
        "name": "findAllComponents",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "ComponentClass",
            "typeName": "ComponentWrapperClass",
          },
          {
            "flags": {
              "isOptional": true,
            },
            "name": "selector",
          },
        ],
        "returnType": {
          "name": "MultiElementWrapper",
          "type": "reference",
          "typeArguments": [
            {
              "name": "Wrapper",
              "type": "typeParameter",
            },
          ],
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.findAny",
        },
        "name": "findAny",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "selectors",
            "typeName": "Array",
          },
        ],
        "returnType": {
          "name": "ElementWrapper",
          "type": "reference",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.findByClassName",
        },
        "name": "findByClassName",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "className",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "ElementWrapper",
          "type": "reference",
        },
      },
      {
        "description": "Returns a wrapper that matches the specified component type with the specified CSS selector.
Note: This function returns the specified component's wrapper even if the specified selector points to a different component type.
",
        "inheritedFrom": {
          "name": "AbstractWrapper.findComponent",
        },
        "name": "findComponent",
        "parameters": [
          {
            "description": "
CSS selector",
            "flags": {
              "isOptional": false,
            },
            "name": "selector",
            "typeName": "string",
          },
          {
            "description": "
Component's wrapper class",
            "flags": {
              "isOptional": false,
            },
            "name": "ComponentClass",
            "typeName": "WrapperClass",
          },
        ],
        "returnType": {
          "name": "Wrapper",
          "type": "typeParameter",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.getElement",
        },
        "name": "getElement",
        "parameters": [],
        "returnType": {
          "name": "string",
          "type": "intrinsic",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.matches",
        },
        "name": "matches",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "selector",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "ElementWrapper",
          "type": "reference",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.toSelector",
        },
        "name": "toSelector",
        "parameters": [],
        "returnType": {
          "name": "string",
          "type": "intrinsic",
        },
      },
    ],
    "name": "ElementWrapper",
  },
  {
    "methods": [
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.find",
        },
        "name": "find",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "selector",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "ElementWrapper",
          "type": "reference",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.findAll",
        },
        "name": "findAll",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "selector",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "MultiElementWrapper",
          "type": "reference",
          "typeArguments": [
            {
              "name": "ElementWrapper",
              "type": "reference",
            },
          ],
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.findAllByClassName",
        },
        "name": "findAllByClassName",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "className",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "MultiElementWrapper",
          "type": "reference",
          "typeArguments": [
            {
              "name": "ElementWrapper",
              "type": "reference",
            },
          ],
        },
      },
      {
        "description": "Returns a multi-element wrapper that matches the specified component type with the specified CSS selector.
If no CSS selector is specified, returns a multi-element wrapper that matches the specified component type.",
        "inheritedFrom": {
          "name": "AbstractWrapper.findAllComponents",
        },
        "name": "findAllComponents",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "ComponentClass",
            "typeName": "ComponentWrapperClass",
          },
          {
            "flags": {
              "isOptional": true,
            },
            "name": "selector",
          },
        ],
        "returnType": {
          "name": "MultiElementWrapper",
          "type": "reference",
          "typeArguments": [
            {
              "name": "Wrapper",
              "type": "typeParameter",
            },
          ],
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.findAny",
        },
        "name": "findAny",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "selectors",
            "typeName": "Array",
          },
        ],
        "returnType": {
          "name": "ElementWrapper",
          "type": "reference",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.findByClassName",
        },
        "name": "findByClassName",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "className",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "ElementWrapper",
          "type": "reference",
        },
      },
      {
        "description": "Returns a wrapper that matches the specified component type with the specified CSS selector.
Note: This function returns the specified component's wrapper even if the specified selector points to a different component type.
",
        "inheritedFrom": {
          "name": "AbstractWrapper.findComponent",
        },
        "name": "findComponent",
        "parameters": [
          {
            "description": "
CSS selector",
            "flags": {
              "isOptional": false,
            },
            "name": "selector",
            "typeName": "string",
          },
          {
            "description": "
Component's wrapper class",
            "flags": {
              "isOptional": false,
            },
            "name": "ComponentClass",
            "typeName": "WrapperClass",
          },
        ],
        "returnType": {
          "name": "Wrapper",
          "type": "typeParameter",
        },
      },
      {
        "description": "Index is one-based because the method uses the :nth-child() CSS pseudo-class.",
        "name": "get",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "index",
            "typeName": "number",
          },
        ],
        "returnType": {
          "name": "T",
          "type": "typeParameter",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.getElement",
        },
        "name": "getElement",
        "parameters": [],
        "returnType": {
          "name": "string",
          "type": "intrinsic",
        },
      },
      {
        "name": "map",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "factory",
          },
        ],
        "returnType": {
          "name": "MultiElementWrapper",
          "type": "reference",
          "typeArguments": [
            {
              "name": "T",
              "type": "typeParameter",
            },
          ],
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.matches",
        },
        "name": "matches",
        "parameters": [
          {
            "flags": {
              "isOptional": false,
            },
            "name": "selector",
            "typeName": "string",
          },
        ],
        "returnType": {
          "name": "ElementWrapper",
          "type": "reference",
        },
      },
      {
        "inheritedFrom": {
          "name": "AbstractWrapper.toSelector",
        },
        "name": "toSelector",
        "parameters": [],
        "returnType": {
          "name": "string",
          "type": "intrinsic",
        },
      },
    ],
    "name": "MultiElementWrapper",
  },
]
`;
